--- a/config/config_retrieval.yaml
+++ b/config/config_retrieval.yaml
@@ -4,7 +4,7 @@ endpoints:
 
 #Azure endpoints
   azure_ai_search:
-    enabled: true
+    enabled: false
     api_key_env: AZURE_VECTOR_SEARCH_API_KEY
     api_endpoint_env: AZURE_VECTOR_SEARCH_ENDPOINT
     index_name: embeddings1536
